docs(API Spec): change base on best practice API spec is good
